现在已经实现了提供ai返回对应的提示消息并写入配置文件了（用户设置也可以写入了），将注入验证的方法提取成单独的工具类了，还修改了注入配置消息后其他方法提取不到的bug，真是勤勉的一天呢！